# bs-nats-updater

./: .gitignore  .mise.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/bs_nats_updater/: __init__.py
