[project]
requires-python = ">=3.13, <3.15"
name = "bs-nats-updater"
description = "Receive Telegram updates using NATS"
version = "3.0.0"
authors = [{ name = "Björn Petersen", email = "pypi@bjoernpetersen.net" }]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "bs-config>=3,<4",
    "nats-py>=2.11,<3",
    "pydantic>2,<3",
    "python-telegram-bot",
]

[project.urls]
changelog = "https://github.com/BlindfoldedSurgery/bs-nats-updater/blob/main/CHANGELOG.md"
repository = "https://github.com/BlindfoldedSurgery/bs-nats-updater"

[dependency-groups]
dev = [
    "commitizen==4.10.0",
    "coverage[toml]>=7, <8",
    "mypy==1.19.*",
    "pre-commit==4.5.*",
    "pytest==9.0.*",
    "pytest-cov==7.0.0",
    "ruff ==0.14.7",
]

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }

[tool.uv.build-backend]
source-include = [
    "CHANGELOG.md"
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
